--- a/Resume.html
+++ b/Resume.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <embed src="Carlos_Torres_CV.pdf#toolbar=0" type="application/pdf" width="100%" height="600px" />
+    <embed src="CV_Torres_Carlos.pdf#toolbar=0" type="application/pdf" width="100%" height="600px" />
   </div>
 </body>
 </html>
