--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#home" class="scroll active" id="home-link">Home</a></li>
                 <li><a href="#about" class="scroll" id="about-link">About</a></li>
                 <li><a href="#projects" class="scroll" id="projects-link">Portfolio</a></li>
-                <li><a href="Resume.html" title="CV_Carlos_Torres">Resume</a></li>
+                <li><a href="Resume.html" title="CV_Carlos_Torres.pdf">Resume</a></li>
                 <li><a href="#contact" class="scroll" id="contact-link">Contact</a></li>
             </ul>
         </nav>
