--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1 class="title">About me</h1>
             <div class="container">
             <div class="text-col">
-	    <h1>Specialist in Trade, Logistics & Supply Chain. Versatile individual with experience collecting, transforming, and organizing data for analysis. Excellent understanding and proficiency of platforms for effective data analyses, including SQL, Spreadsheets, Tableau, R and Python. Strong communication, organizational, and analytical skills. Recently completed the Google Data Analytics Certificate a rigorous, hands-on program that covers the entire scope of the data analysis process.<h1>	
+	    <h1>Versatile individual with experience in collecting, transforming and organizing data for analysis. Excellent understanding and proficiency of platforms for effective data analyses, including SQL, Spreadsheets, Tableau, R and Python. Strong communication, organizational, and analytical skills. Recently completed certifications in Python & Data Analytics rigorous, hands-on programs by the University of Michigan and Google.<h1>	
             </div>
 	    <div class="img-col">
 	    <img src="picture.jpeg" alt="Picture of Carlos" id="myPicture">
